crates/runtime-table-partition/tests/snapshots/partition_table_provider__modulo_equality.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionMemTableExec: partition_value=3
