crates/runtime-table-partition/tests/snapshots/partition_table_provider__modulo_less_than.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
UnionExec
  PartitionMemTableExec: partition_value=0
  PartitionMemTableExec: partition_value=1
  PartitionMemTableExec: partition_value=2
  PartitionMemTableExec: partition_value=3
  PartitionMemTableExec: partition_value=4
