crates/runtime-table-partition/tests/snapshots/partition_table_provider__partition_and_data_filters.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionMemTableExec: partition_values=[Utf8("us-east-1")], filters=[value > Int64(20)]
