crates/runtime-table-partition/tests/snapshots/partition_table_provider__partition_filter_only.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionMemTableExec: partition_value=us-east-1
