crates/runtime-table-partition/tests/snapshots/partition_table_provider__simple_column_greater_than.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionedUnionExec
  PartitionMemTableExec: partition_values=[Int32(30)]
  PartitionMemTableExec: partition_values=[Int32(40)]
