crates/runtime-table-partition/tests/snapshots/partition_table_provider__truncate_greater_than.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
UnionExec
  PartitionMemTableExec: partition_value=2000
  PartitionMemTableExec: partition_value=3000
