crates/runtime-table-partition/tests/snapshots/partition_table_provider__truncate_range.snap
---
source: crates/runtime-table-partition/tests/partition_table_provider.rs
expression: explain_plan
---
PartitionMemTableExec: partition_values=[Int64(1000)], filters=[sales >= Int64(1000), sales < Int64(2000)]
